# MJPEGWriter

./: .gitignore  CMakeLists.txt  MJPEGWriter.h  MJPEGWriter.pc.in
include/: MJPEGWriter.h
src/: CMakeLists.txt  MJPEGWriter.cpp  auto.h
